Initial UI prototype
Basic layout using CSS grid. This may not be suitable for toggling
sidebar visibility.

Starting with the colour #560C70 I used the adobe color wheel to get a
triad scheme.

https://color.adobe.com/create/color-wheel/?base=2&rule=Triad&selected=0&name=My%20Color%20Theme&mode=rgb&rgbvalues=0.33725490196078434,0.047058823529411764,0.4392156862745098,1,0.7199596774190468,0.09999999999999998,0.7399999999997817,0,1,0.07999999999999999,0.8,0.4970566037734898,0.03500000000000003,0.7,0.42019811320745926&swatchOrder=0,1,2,3,4

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,8 +1,25 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+.smallCaps {
+	font-variant-caps: small-caps;
+}
+
+.purple {
+	color: rebeccapurple;
+}
+
+.primaryColor {
+	background-color: #560C70;
+	/*background-color: #BD00FF;*/
+}
+
+.secondaryColor {
+	background-color: #09B26B;
+	/*background-color: #14CC7F;*/
+}
+
+.tertiaryColor {
+	color: #FFB819;
 }
