--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title><%= title %></title>
+	<script src="js/bundle.js"></script>
 	<link rel='stylesheet' href='/style/style.css' />
 </head>
 <body>
