Styling for clarity
Making fragment block elements
Improved readability
Using attribute selectors to display fragment state

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -23,3 +23,17 @@ body {
 .tertiaryColor {
 	color: #FFB819;
 }
+
+.fragment {
+	border: 5px solid black;
+	background-color: teal;
+	color: #f0f8ff;
+}
+
+.fragment[changed] {
+	background-color: blue;
+}
+
+.fragment[changed]:focus-within {
+	background-color: red;
+}
