Tidied content / logs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,6 @@
 			</div>
 
 			<aside id="transclusionData" class="secondaryColor flexChild">
-				The transclusion data
 			</aside>
 
 			<div class="toggle" data-elemId="sidebar" data-hidden="<<" data-visible=">>">
@@ -46,8 +45,8 @@
 			</div>
 
 			<div id="sidebar" class="secondaryColor flexChild">
-				<h1>Plugins</h1>
-				Sidebar with plugins
+				<h1>Addons</h1>
+				Sidebar for addons
 			</div>
 		</main>
 
