--- a/views/common/head.ejs
+++ b/views/common/head.ejs
@@ -1,6 +1,7 @@
 	<title><%= title %></title>
 	<meta charset="utf-8">
 	<meta name=viewport content="width=device-width, initial-scale=1">
+	<script src="js/runtime.js"></script>
 	<script src="js/bundle.js"></script>
 	<link rel='stylesheet' href='/style/layout.css' />
 	<link rel='stylesheet' href='/style/style.css' />
